[package]
name = "vaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
image = "0.24.9"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
wgpu = "0.19.1"
winit = "0.29.10"
